updated nacl structure
