# nacl-collection/api/controllers/nacl.js
@@ -1,44 +1,45 @@
 'use strict';
-/*
- 'use strict' is not required but helpful for turning syntactical errors into true errors in the program flow
- https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode
-*/
+// Include our "db"
+var db = require('../../config/db')();
+// Exports all the functions to perform on the db
+module.exports = {getAll, save, getOne, update, delNacl};
 
-/*
- Modules make it possible to import JavaScript files into your application.  Modules are imported
- using 'require' statements that give you a reference to the module.
+//GET /Nacl operationId
+function getAll(req, res, next) {
+  res.json({ Nacls: db.find()});
+}
+//POST /Nacl operationId
+function save(req, res, next) {
+    res.json({success: db.save(req.body), description: "Nacl added to the list!"});
+}
+//GET /Nacl/{id} operationId
+function getOne(req, res, next) {
+    var id = req.swagger.params.id.value; //req.swagger contains the path parameters
+    var Nacl = db.find(id);
+    if(Nacl) {
+        res.json(Nacl);
+    }else {
+        res.status(204).send();
+    }        
+}
+//PUT /Nacl/{id} operationId
+function update(req, res, next) {
+    var id = req.swagger.params.id.value; //req.swagger contains the path parameters
+    var Nacl = req.body;
+    if(db.update(id, Nacl)){
+        res.json({success: 1, description: "Nacl updated!"});
+    }else{
+        res.status(204).send();
+    }
 
-  It is a good idea to list the modules that your application depends on in the package.json in the project root
- */
-var util = require('util');
+}
+//DELETE /Nacl/{id} operationId
+function delNacl(req, res, next) {
+    var id = req.swagger.params.id.value; //req.swagger contains the path parameters
+    if(db.remove(id)){
+        res.json({success: 1, description: "Nacl deleted!"});
+    }else{
+        res.status(204).send();
+    }
 
-/*
- Once you 'require' a module you can reference the things that it exports.  These are defined in module.exports.
-
- For a controller in a127 (which this is) you should export the functions referenced in your Swagger document by name.
-
- Either:
-  - The HTTP Verb of the corresponding operation (get, put, post, delete, etc)
-  - Or the operationId associated with the operation in your Swagger document
-
-  In the starter/skeleton project the 'get' operation on the '/hello' path has an operationId named 'hello'.  Here,
-  we specify that in the exports of this module that 'hello' maps to the function named 'hello'
- */
-module.exports = {
-  hello: hello
-};
-
-/*
-  Functions in a127 controllers used for operations should take two parameters:
-
-  Param 1: a handle to the request object
-  Param 2: a handle to the response object
- */
-function hello(req, res) {
-  // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Hello nacl, %s!', name);
-
-  // this sends back a JSON response which is a single string
-  res.json(hello);
 }
