# nacl-collection/api/swagger/swagger.yaml
@@ -18,26 +18,103 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
-    get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
+  /nacl:
+    # our controller name
+    x-swagger-router-controller: nacl
+    post:
+      operationId: save
+      description: add a new nacl to the list
+      # nacl info to be stored
       parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
+        - name: ruleNumber
+          description: Nacl properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Nacl"
       responses:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      operationId: getAll
+      description: get the nacls list
+      # define the type of response for Success "200" and Error
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetNaclsListResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /nacl/{id}:
+    # our controller name
+    x-swagger-router-controller: nacl
+    get:
+      operationId: getOne
+      description: get a nacl
+      # define the type of response for Success "200" and Error
+      parameters:
+        - name: id
+          type: string
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetNaclResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      operationId: update
+      description: update a nacl
+      # define the parameters
+      parameters:
+        - name: id
+          description: Nacl id
+          type: string
+          in: path
+          required: true
+        - name: ruleNumber
+          description: Nacl properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Nacl"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      operationId: delNacl
+      description: delete a nacl
+      # define the parameters
+      parameters:
+        - name: id
+          description: Nacl id
+          type: string
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
         default:
           description: Error
           schema:
@@ -46,15 +123,106 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
+  GetNaclResponse:
+      required:
+        - id
+        - cidrBlock
+        - egress
+        - fromPort
+        - toPort
+        - protocol
+        - ruleAction
+        - ruleNumber
+      properties:
+        id:
+          type: string
+        cidrBlock: 
+          type: string
+        egress:
+          type: number
+        fromPort:
+          type: number
+        toPort:
+          type: number
+        protocol:
+          type: number
+        ruleAction:
+          type: string
+        ruleNumber:
+          type: number
+  Nacl:
+    type: object
     properties:
-      message:
+      cidrBlock: 
         type: string
+        description: task object name
+      egress:
+        type: number
+        description: task object name
+      fromPort:
+        type: number
+        description: task object name
+      toPort:
+        type: number
+        description: task object name
+      protocol:
+        type: number
+        description: task object name
+      ruleAction:
+        type: string
+        description: task object name
+      ruleNumber:
+        type: number
+        description: task object name
+    required:
+      - cidrBlock
+      - egress
+      - fromPort
+      - toPort
+      - protocol
+      - ruleAction
+      - ruleNumber
+  GetNaclsListResponse:
+    required:
+      - nacls
+    properties:
+      # The array of nacls
+      nacls:
+        type: array
+        items: 
+          type: object
+          properties:
+            id:
+              type: string
+            cidrBlock: 
+              type: string
+            egress:
+              type: number
+            fromPort:
+              type: number
+            toPort:
+              type: number
+            protocol:
+              type: number
+            ruleAction:
+              type: string
+            ruleNumber:
+              type: number    
   ErrorResponse:
     required:
       - message
     properties:
       message:
         type: string
+  GeneralResponse:
+    type: object
+    properties:
+      success:
+        type: number
+        description: returns 1 if successful
+      description:
+        type: string
+        description: a short comment 
+    required:
+      - success
+      - description
